clean up brief readme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
+<div style="padding:10px;margin-bottom:30px;display:block;">
+    <a [routerLink]="['protected']">protected resource</a>
+</div>
 <router-outlet></router-outlet>
