--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1>{{title}}</h1>
 <div style="padding:10px;margin-bottom:30px;display:block;">
     <a [routerLink]="['protected']">protected resource</a>
 </div>
