enable silent refresh token

--- a/src/app/protected/protected.component.html
+++ b/src/app/protected/protected.component.html
@@ -3,5 +3,9 @@
 </div>
 <br>
 <div>
+  <button (click)="getSecureValue()">Get Secure Value</button>
+  {{values}}
+</div>
+<div>
   To go back click <a (click)="goback()">here</a>.
 </div>
